some more letters inside

--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
 <!DOCTYPE HTML>
+<html lang="de">
+    
+    <head>
+        <meta charset="utf8">
+        <meta name="description" content="Brads and Crafts main page">
+        <title>brads and crafts</title>
+    </head>
+
+    <body>
+        <img src="img/bac_logo.png" alt="brads and crafts logo" width="200">
+        <h1>Lorem ipsum</h1>
+        <h2>Uptintia sinctore ducid magniendae</h2>
+        <p>Doluptas abo. Eligenis porum qui totatescipsa imus ea voluptia idem veliquatus doles aborepra voleserios reius et optaectio. Ut quibus et volor repuditat quas ilia dolor aliquas es none sit, testia alit ommolo invent quia et vendisti nobit quati</p>
+        <h2>Atusdanis im necuptatios</h2>
+        <p>Eum labor aborum ex explist, consectiis sequi volorrum alit laborep tatinulpa quam es restorerspe voluptatibus natur rendunt.</p>
+        <p>Temquo corestiat as et, et qui andit ese il iusdaec tamet, occumque sinvel in net quunt fugiaecum, sitios diant vendio volori dolorum quias et eliquamus, cullupta nobitem quae.
+            Il im inum quiaturibus sim rentibus recaborerum veliquam, optaepta et excestem explatibusam quam etur, sus dolupidis mo qui intotat landis ariorit voluptam vitatquam volorem quia voluptatiae iduciis consequaero molorerrore in rehent odis sita doluptat.
+Dentur, nimus. Diore pro optae il idesci voluptatio. Nequia voluptur?
+        </p>
+        <p>
+            Jevgenij Rykov<br />
+            Malmedyer Str 25<br />
+            52066 Aachen
+        </p>
+    </body>
+
+</html>
+
