added few pages

--- a/index.htm
+++ b/index.htm
@@ -8,8 +8,26 @@
     </head>
 
     <body>
-        <img src="img/bac_logo.png" alt="brads and crafts logo" width="200">
-        <h1>Lorem ipsum</h1>
+
+        <header>
+
+        <!-- Brads and Crafts Logo-->
+        <a href="index.htm"><img src="img/bac_logo.png" alt="brads and crafts logo" width="200"></a>
+
+        <!-- Navigation -->
+        <nav role="navigation">
+            <ul>
+                <li>home</li>
+                <li><a href="products.htm" title="Products">products</a></li>
+                <li><a href="idea.htm" title="Idea">idea</a></li>
+                <li><a href="contact.htm" title="Contact">contact</a></li>
+            </ul>
+        </nav>
+        
+        </header>
+    <mai n>
+        <h1>brads and crafts</h1>
+
         <h2>Uptintia sinctore ducid magniendae</h2>
         <p>Doluptas abo. Eligenis porum qui totatescipsa imus ea voluptia idem veliquatus doles aborepra voleserios reius et optaectio. Ut quibus et volor repuditat quas ilia dolor aliquas es none sit, testia alit ommolo invent quia et vendisti nobit quati</p>
         <h2>Atusdanis im necuptatios</h2>
@@ -18,12 +36,16 @@
             Il im inum quiaturibus sim rentibus recaborerum veliquam, optaepta et excestem explatibusam quam etur, sus dolupidis mo qui intotat landis ariorit voluptam vitatquam volorem quia voluptatiae iduciis consequaero molorerrore in rehent odis sita doluptat.
 Dentur, nimus. Diore pro optae il idesci voluptatio. Nequia voluptur?
         </p>
-        <p>
-            Jevgenij Rykov<br />
-            Malmedyer Str 25<br />
-            52066 Aachen
-        </p>
+    </main>
+                <!-- Footer -->
+                <footer>
+                        <ul>
+                            <li>© 2018 brads and crafts</li>
+                            <li><a href="https://www.instagram.com/brads_and_crafts/" target="_blank"><img src="img/insta_logo.png" alt="Instagram Logo" width="24">Instagram</a></li>
+                            <li><a href="impressum.htm" title="Impressum / Datenschutz">Impressum / Datenschutz</a></li>
+                        </ul>
+                    </footer>
+
     </body>
 
 </html>
-
