--- a/idea.htm
+++ b/idea.htm
@@ -5,6 +5,7 @@
         <meta charset="utf8">
         <meta name="description" content="The story behind the brads and crafts">
         <title>Idea</title>
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
 
     <body>
