--- a/impressum.htm
+++ b/impressum.htm
@@ -5,6 +5,7 @@
         <meta charset="utf8">
         <meta name="description" content="Brads and Crafts main page">
         <title>Impressum</title>
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
 
     <body>
