--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,7 @@
         <meta charset="utf8">
         <meta name="description" content="Brads and Crafts main page">
         <title>brads and crafts</title>
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
 
     <body>
@@ -15,7 +16,7 @@
         <a href="index.htm"><img src="img/bac_logo.png" alt="brads and crafts logo" width="200"></a>
 
         <!-- Navigation -->
-        <nav role="navigation">
+        <nav class="navigation" role="navigation">
             <ul>
                 <li>home</li>
                 <li><a href="products.htm" title="Products">products</a></li>
