--- a/products.htm
+++ b/products.htm
@@ -5,6 +5,7 @@
         <meta charset="utf8">
         <meta name="description" content="Brads and Crafts main page">
         <title>Products</title>
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
 
     <body>
@@ -12,10 +13,10 @@
         <header>
 
         <!-- Brads and Crafts Logo-->
-        <img src="img/bac_logo.png" alt="brads and crafts logo" width="200">
+        <img class="bac_logo" src="img/bac_logo.png" alt="brads and crafts logo" width="200">
 
         <!-- Navigation -->
-        <nav role="navigation">
+        <nav id="navigation" role="navigation">
             <ul>
                 <li><a href="index.htm" title="home">home</a></li>
                 <li>products</li>
