--- a/contact.htm
+++ b/contact.htm
@@ -5,6 +5,7 @@
         <meta charset="utf8">
         <meta name="description" content="The story behind the brads and crafts">
         <title>Comntact</title>
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
 
     <body>
