added some more css

--- a/index.htm
+++ b/index.htm
@@ -16,8 +16,8 @@
         <a href="index.htm"><img src="img/bac_logo.png" alt="brads and crafts logo" width="200"></a>
 
         <!-- Navigation -->
-        <nav class="navigation" role="navigation">
-            <ul>
+        <nav role="navigation">
+            <ul class="navlist">
                 <li>home</li>
                 <li><a href="products.htm" title="Products">products</a></li>
                 <li><a href="idea.htm" title="Idea">idea</a></li>
@@ -26,17 +26,22 @@
         </nav>
         
         </header>
-    <mai n>
+
+    <main>
         <h1>brads and crafts</h1>
 
+        <article>
         <h2>Uptintia sinctore ducid magniendae</h2>
         <p>Doluptas abo. Eligenis porum qui totatescipsa imus ea voluptia idem veliquatus doles aborepra voleserios reius et optaectio. Ut quibus et volor repuditat quas ilia dolor aliquas es none sit, testia alit ommolo invent quia et vendisti nobit quati</p>
+        </article>
+
+        <article>
         <h2>Atusdanis im necuptatios</h2>
         <p>Eum labor aborum ex explist, consectiis sequi volorrum alit laborep tatinulpa quam es restorerspe voluptatibus natur rendunt.</p>
-        <p>Temquo corestiat as et, et qui andit ese il iusdaec tamet, occumque sinvel in net quunt fugiaecum, sitios diant vendio volori dolorum quias et eliquamus, cullupta nobitem quae.
-            Il im inum quiaturibus sim rentibus recaborerum veliquam, optaepta et excestem explatibusam quam etur, sus dolupidis mo qui intotat landis ariorit voluptam vitatquam volorem quia voluptatiae iduciis consequaero molorerrore in rehent odis sita doluptat.
-Dentur, nimus. Diore pro optae il idesci voluptatio. Nequia voluptur?
-        </p>
+        <p>Temquo corestiat as et, et qui andit ese il iusdaec tamet, occumque sinvel in net quunt fugiaecum, sitios diant vendio volori dolorum quias et eliquamus, cullupta nobitem quae.</p>
+        <p>Il im inum quiaturibus sim rentibus recaborerum veliquam, optaepta et excestem explatibusam quam etur, sus dolupidis mo qui intotat landis ariorit voluptam vitatquam volorem quia voluptatiae iduciis consequaero molorerrore in rehent odis sita doluptat. Dentur, nimus. Diore pro optae il idesci voluptatio. Nequia voluptur?</p>
+        </article>
+
     </main>
                 <!-- Footer -->
                 <footer>
