--- a/products.htm
+++ b/products.htm
@@ -16,7 +16,7 @@
         <img class="bac_logo" src="img/bac_logo.png" alt="brads and crafts logo" width="200">
 
         <!-- Navigation -->
-        <nav id="navigation" role="navigation">
+        <nav role="navigation">
             <ul>
                 <li><a href="index.htm" title="home">home</a></li>
                 <li>products</li>
