--- a/idea.htm
+++ b/idea.htm
@@ -6,6 +6,8 @@
         <meta name="description" content="The story behind the brads and crafts">
         <title>Idea</title>
         <link rel="stylesheet" href="styles/styles.css">
+        <!-- Metronic Slav Webfont from Adobe Typekit-->
+        <link rel="stylesheet" href="https://use.typekit.net/xxi1ypp.css">
     </head>
 
     <body>
@@ -17,7 +19,7 @@
 
         <!-- Navigation -->
         <nav role="navigation">
-            <ul>
+            <ul class="navlist">
                 <li><a href="index.htm" title="home">home</a></li>
                 <li><a href="products.htm" title="home">products</a></li>
                 <li>idea</li>
