--- a/impressum.htm
+++ b/impressum.htm
@@ -5,6 +5,8 @@
         <meta charset="utf8">
         <meta name="description" content="Brads and Crafts main page">
         <title>Impressum</title>
+        <!-- Metronic Slav Webfont from Adobe Typekit-->
+        <link rel="stylesheet" href="https://use.typekit.net/xxi1ypp.css">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
 
@@ -17,7 +19,7 @@
 
         <!-- Navigation -->
         <nav role="navigation">
-            <ul>
+            <ul class="navlist">
                 <li><a href="index.htm">home</a></li>
                 <li><a href="products.htm">products</a></li>
                 <li><a href="idea.htm">idea</a></li>
