--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,8 @@
         <meta name="description" content="Brads and Crafts main page">
         <title>brads and crafts</title>
         <link rel="stylesheet" href="styles/styles.css">
+        <!-- Metronic Slav Webfont from Adobe Typekit-->
+        <link rel="stylesheet" href="https://use.typekit.net/xxi1ypp.css">
     </head>
 
     <body>
@@ -13,8 +15,9 @@
         <header>
 
         <!-- Brads and Crafts Logo-->
-        <a href="index.htm"><img src="img/bac_logo.png" alt="brads and crafts logo" width="200"></a>
-
+        <div class="contwrap">
+            <a href="index.htm"><img src="img/bac_logo.png" alt="brads and crafts logo" width="200"></a>
+        </div>
         <!-- Navigation -->
         <nav role="navigation">
             <ul class="navlist">
@@ -24,13 +27,12 @@
                 <li><a href="contact.htm" title="Contact">contact</a></li>
             </ul>
         </nav>
-        
         </header>
 
     <main>
-        <h1>brads and crafts</h1>
-
+    <div class="contwrap">
         <article>
+        <h1>brads and crafts</h1>
         <h2>Uptintia sinctore ducid magniendae</h2>
         <p>Doluptas abo. Eligenis porum qui totatescipsa imus ea voluptia idem veliquatus doles aborepra voleserios reius et optaectio. Ut quibus et volor repuditat quas ilia dolor aliquas es none sit, testia alit ommolo invent quia et vendisti nobit quati</p>
         </article>
@@ -41,16 +43,18 @@
         <p>Temquo corestiat as et, et qui andit ese il iusdaec tamet, occumque sinvel in net quunt fugiaecum, sitios diant vendio volori dolorum quias et eliquamus, cullupta nobitem quae.</p>
         <p>Il im inum quiaturibus sim rentibus recaborerum veliquam, optaepta et excestem explatibusam quam etur, sus dolupidis mo qui intotat landis ariorit voluptam vitatquam volorem quia voluptatiae iduciis consequaero molorerrore in rehent odis sita doluptat. Dentur, nimus. Diore pro optae il idesci voluptatio. Nequia voluptur?</p>
         </article>
-
+    </div>
     </main>
                 <!-- Footer -->
                 <footer>
-                        <ul>
+                    <div class="contwrap">
+                        <ul class="navlist">
                             <li>© 2018 brads and crafts</li>
                             <li><a href="https://www.instagram.com/brads_and_crafts/" target="_blank"><img src="img/insta_logo.png" alt="Instagram Logo" width="24">Instagram</a></li>
                             <li><a href="impressum.htm" title="Impressum / Datenschutz">Impressum / Datenschutz</a></li>
                         </ul>
-                    </footer>
+                    </div>
+                </footer>
 
     </body>
 
