--- a/products.htm
+++ b/products.htm
@@ -6,18 +6,19 @@
         <meta name="description" content="Brads and Crafts main page">
         <title>Products</title>
         <link rel="stylesheet" href="styles/styles.css">
+        <!-- Metronic Slav Webfont from Adobe Typekit-->
+        <link rel="stylesheet" href="https://use.typekit.net/xxi1ypp.css">
     </head>
 
     <body>
 
         <header>
-
         <!-- Brads and Crafts Logo-->
-        <img class="bac_logo" src="img/bac_logo.png" alt="brads and crafts logo" width="200">
+        <a href="index.htm"><img class="bac_logo" src="img/bac_logo.png" alt="brads and crafts logo" width="200"></a>
 
         <!-- Navigation -->
         <nav role="navigation">
-            <ul>
+            <ul class="navlist">
                 <li><a href="index.htm" title="home">home</a></li>
                 <li>products</li>
                 <li><a href="idea.htm" title="Idea">idea</a></li>
@@ -31,12 +32,14 @@
     </main>
                 <!-- Footer -->
                 <footer>
-                        <ul>
+                    <div class="contwrap">
+                        <ul class="navlist">
                             <li>© 2018 brads and crafts</li>
                             <li><a href="https://www.instagram.com/brads_and_crafts/" target="_blank"><img src="img/insta_logo.png" alt="Instagram Logo" width="24">Instagram</a></li>
                             <li><a href="impressum.htm" title="Impressum / Datenschutz">Impressum / Datenschutz</a></li>
                         </ul>
-                    </footer>
+                    </div>
+                </footer>
     
 
     </body>
