--- a/contact.htm
+++ b/contact.htm
@@ -4,8 +4,10 @@
     <head>
         <meta charset="utf8">
         <meta name="description" content="The story behind the brads and crafts">
-        <title>Comntact</title>
+        <title>Contact</title>
         <link rel="stylesheet" href="styles/styles.css">
+        <!-- Metronic Slav Webfont from Adobe Typekit-->
+        <link rel="stylesheet" href="https://use.typekit.net/xxi1ypp.css">
     </head>
 
     <body>
@@ -17,7 +19,7 @@
 
         <!-- Navigation -->
         <nav role="navigation">
-            <ul>
+            <ul class="navlist">
                 <li><a href="index.htm" title="Home">home</a></li>
                 <li><a href="products.htm" title="Products">products</a></li>
                 <li><a href="idea.htm" title="Idea">idea</a></li>
