some strange behavior here...

--- a/index.htm
+++ b/index.htm
@@ -48,9 +48,9 @@
                 <!-- Footer -->
                 <footer>
                     <div class="contwrap">
-                        <ul class="navlist">
-                            <li>© 2018 brads and crafts</li>
-                            <li><a href="https://www.instagram.com/brads_and_crafts/" target="_blank"><img src="img/insta_logo.png" alt="Instagram Logo" width="24">Instagram</a></li>
+                        <p>© 2018 brads and crafts</p>
+                        <ul>
+                            <li><a href="https://www.instagram.com/brads_and_crafts/" target="_blank">Instagram</a></li>
                             <li><a href="impressum.htm" title="Impressum / Datenschutz">Impressum / Datenschutz</a></li>
                         </ul>
                     </div>
